Per Tim, fix r59949: use CSS padding (margin doesn't seem to work on Firefox and Safari) instead of fake empty columns, also added text-align:center

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -547,6 +547,11 @@ input.mw-revdelundel-hidden {
 	visibility: hidden;
 }
 
+td.mw-revdel-checkbox, th.mw-revdel-checkbox {
+	padding-right: 10px;
+	text-align: center;
+}
+
 /* feed links */
 a.feedlink {
 	background: url("images/feed-icon.png") center left no-repeat;
